// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditAppetiteInformationPanel should render correctly Buyer and Seller information 1`] = `
<DocumentFragment>
  .c1 h3 {
  margin-bottom: 0px;
}

.c1 p {
  font-style: italic;
  width: 80%;
}

.c0.c0.c0.c0 h3 {
  font-weight: bold;
}

<div
    class="c0 c1"
    data-test-id="credit-appetite-header-buyer"
  >
    <h3>
      Mr. Buyer information
    </h3>
    <p>
      Internal information relating to the buyer
    </p>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Appetite"
    value="Yes"
  >
    <div
      class="c1"
      data-test-id="appetite-label"
    >
      <span
        class="c2"
      >
        Appetite 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="appetite-value"
    >
      Yes
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Credit limit"
    value="$ 10,000,000"
  >
    <div
      class="c1"
      data-test-id="credit-limit-label"
    >
      <span
        class="c2"
      >
        Credit limit 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="credit-limit-value"
    >
      $ 10,000,000
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Expiry date"
  >
    <div
      class="c1"
      data-test-id="expiry-date-label"
    >
      <span
        class="c2"
      >
        Expiry date 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="expiry-date-value"
    >
      -
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Availability"
    value="Yes"
  >
    <div
      class="c1"
      data-test-id="availability-label"
    >
      <span
        class="c2"
      >
        Availability 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="availability-value"
    >
      Yes
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Amount available"
  >
    <div
      class="c1"
      data-test-id="amount-available-label"
    >
      <span
        class="c2"
      >
        Amount available 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="amount-available-value"
    >
      <span>
        $ 8,000,000
      </span>
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Availability reserved"
  >
    <div
      class="c1"
      data-test-id="availability-reserved-label"
    >
      <span
        class="c2"
      >
        Availability reserved 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="availability-reserved-value"
    >
      <span>
        $ 6,000,000
      </span>
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Minimum risk fee"
    value="0.90 %"
  >
    <div
      class="c1"
      data-test-id="minimum-risk-fee-label"
    >
      <span
        class="c2"
      >
        Minimum risk fee 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="minimum-risk-fee-value"
    >
      0.90 %
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Maximum tenor"
    value="90 days"
  >
    <div
      class="c1"
      data-test-id="maximum-tenor-label"
    >
      <span
        class="c2"
      >
        Maximum tenor 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="maximum-tenor-value"
    >
      90 days
    </div>
  </div>
  .c2 h3 {
  margin-bottom: 0px;
}

.c2 p {
  font-style: italic;
  width: 80%;
}

.c1.c1.c1.c1 h3 {
  font-weight: bold;
}

.c4 display:inline-block span {
  vertical-align: middle;
}

.c4 svg {
  margin-right: 10px;
  width: 14px;
  height: 14px;
  vertical-align: middle;
}

.c0 {
  border-top: 1px solid #c0cfde;
  padding: 20px 0;
}

.c0.c0 .column:not(.grid) {
  padding-bottom: 10px;
}

.c3 {
  margin-top: 16px;
}

<div
    class="c0"
  >
    <div
      class="c1 c2"
      data-test-id="credit-appetite-header-seller"
    >
      <h3>
        Ms. Seller information
      </h3>
      <p>
        Information you have shared with specific sellers
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="ui stackable grid"
      >
        <div
          class="three column row"
        >
          <div
            class="column"
          >
            <div
              class="c4"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="appetite-label"
              >
                Appetite
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="c4"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="availability-y-n-label"
              >
                Availability (Y/N)
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="c4"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="credit-limit-label"
              >
                Credit limit
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="c4"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="risk-fee-label"
              >
                Risk fee
                <span>
                   - 0.10 %
                </span>
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="c4"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="margin-label"
              >
                Margin
                <span>
                   - 100.00 %
                </span>
              </span>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="c4"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="max-tenor-label"
              >
                Max. tenor
                <span>
                   - 100 days
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreditAppetiteInformationPanel should render correctly no credit information 1`] = `
<DocumentFragment>
  .c1 h3 {
  margin-bottom: 0px;
}

.c1 p {
  font-style: italic;
  width: 80%;
}

.c0.c0.c0.c0 h3 {
  font-weight: bold;
}

<div
    class="c0 c1"
    data-test-id="credit-appetite-header-empty"
  >
    <h3>
      No credit appetite information on Mr. Buyer
    </h3>
    <p>
      To enter information, go to the appetite section and add Mr. Buyer.
    </p>
  </div>
</DocumentFragment>
`;

exports[`CreditAppetiteInformationPanel should render correctly only Buyer information 1`] = `
<DocumentFragment>
  .c1 h3 {
  margin-bottom: 0px;
}

.c1 p {
  font-style: italic;
  width: 80%;
}

.c0.c0.c0.c0 h3 {
  font-weight: bold;
}

<div
    class="c0 c1"
    data-test-id="credit-appetite-header-buyer"
  >
    <h3>
      Mr. Buyer information
    </h3>
    <p>
      Internal information relating to the buyer
    </p>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Appetite"
    value="Yes"
  >
    <div
      class="c1"
      data-test-id="appetite-label"
    >
      <span
        class="c2"
      >
        Appetite 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="appetite-value"
    >
      Yes
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Credit limit"
    value="$ 10,000,000"
  >
    <div
      class="c1"
      data-test-id="credit-limit-label"
    >
      <span
        class="c2"
      >
        Credit limit 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="credit-limit-value"
    >
      $ 10,000,000
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Expiry date"
  >
    <div
      class="c1"
      data-test-id="expiry-date-label"
    >
      <span
        class="c2"
      >
        Expiry date 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="expiry-date-value"
    >
      -
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Availability"
    value="Yes"
  >
    <div
      class="c1"
      data-test-id="availability-label"
    >
      <span
        class="c2"
      >
        Availability 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="availability-value"
    >
      Yes
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Amount available"
  >
    <div
      class="c1"
      data-test-id="amount-available-label"
    >
      <span
        class="c2"
      >
        Amount available 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="amount-available-value"
    >
      <span>
        $ 8,000,000
      </span>
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Availability reserved"
  >
    <div
      class="c1"
      data-test-id="availability-reserved-label"
    >
      <span
        class="c2"
      >
        Availability reserved 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="availability-reserved-value"
    >
      <span>
        $ 6,000,000
      </span>
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Minimum risk fee"
    value="0.90 %"
  >
    <div
      class="c1"
      data-test-id="minimum-risk-fee-label"
    >
      <span
        class="c2"
      >
        Minimum risk fee 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="minimum-risk-fee-value"
    >
      0.90 %
    </div>
  </div>
  .c2 {
  display: inline-block;
  font-weight: bold;
}

.c0 {
  margin-top: 24px;
  margin-bottom: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0px;
}

.c1 {
  width: 250px;
  margin-right: 10px;
}

.c3 {
  display: inline-block;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: unset;
    -webkit-box-align: unset;
    -ms-flex-align: unset;
    align-items: unset;
  }
}

<div
    class="c0"
    label="Maximum tenor"
    value="90 days"
  >
    <div
      class="c1"
      data-test-id="maximum-tenor-label"
    >
      <span
        class="c2"
      >
        Maximum tenor 
      </span>
    </div>
    <div
      class="c3"
      data-test-id="maximum-tenor-value"
    >
      90 days
    </div>
  </div>
</DocumentFragment>
`;
